test/fail/vardeclinit-inferred-type.app
//No function
application test

  function do() {
    var a := test(); //shouldn't break rename phase
    
  }
